Изменения согласно новым требованиям + рефакторинг: - поддержка смены ориентации экрана - сохранение заказов в БД (Room)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">TaxiOrdersService</string>
 
     // Common
+    <string name="image_url">http://www.roxiemobile.ru/careers/test/images/</string>
     <string name="about_developer">О разработчике</string>
     <string name="refresh">Обновить</string>
 
